--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>So you want to build a web application?</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/serif.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,16 +24,25 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-				<section data-markdown>
-					# Test
-					## test 2
-					```ruby
-					get '/' do
-					  test
-					end
-					```
+				<section>
+					<h2>So you want to build a web application?</h2>
+					<small>
+						<p>Ivan Barreto</p>
+						<p>Software Developer @ Jobber</p>
+						<a href="https://github.com/ibarreto" target="_blank">https://github.com/ibarreto</a>
+					</small>
+				</section>
+				<section>
+					<h2>Where do I start?</h2>
+				</section>
+				<section>
+					<h1>HTML</h1>
+				</section>
+				<section>
+					<h1>CSS</h1>
+				</section>
+				<section>
+					<h1>Javascript</h1>
 				</section>
 			</div>
 		</div>
