--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>So you want to build a web application?</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/serif.css">
+		<link rel="stylesheet" href="css/theme/moon.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -33,13 +33,29 @@
 					</small>
 				</section>
 				<section>
-					<h2>Where do I start?</h2>
+					<section>
+						<h2>Where do I start? 🤔</h2>
+					</section>
+					<section>
+						<h2>The fundamentals!</h2>
+					</section>
 				</section>
 				<section>
 					<h1>HTML</h1>
 				</section>
 				<section>
-					<h1>CSS</h1>
+					<section>
+						<h1>CSS</h1>
+					</section>
+					<section>
+<div data-markdown>
+```css
+.red-border {
+	border: 1px solid red;
+}
+```
+</div>
+					</section>
 				</section>
 				<section>
 					<h1>Javascript</h1>
