add sections for debugging, questions, thanks

--- a/index.html
+++ b/index.html
@@ -124,6 +124,31 @@ $(document).ready(function() {
 </div>
 					</section>
 				</section>
+				<section>
+					<section>
+						<h2>Debugging</h2>
+					</section>
+					<section>
+						<h2>For ruby, try "pry"</h2>
+<div data-markdown>
+```ruby
+require 'pry'
+
+def some_function
+	...
+	binding.pry
+	...
+end
+```
+</div>
+					</section>
+				</section>
+				<section>
+					<h2>Questions?</h2>
+				</section>
+				<section>
+					<h2>Thank you!</h2>
+				</section>
 			</div>
 		</div>
 
