add basic HTML example

--- a/index.html
+++ b/index.html
@@ -41,7 +41,24 @@
 					</section>
 				</section>
 				<section>
-					<h1>HTML</h1>
+					<section>
+						<h1>HTML</h1>
+					</section>
+					<section>
+<div data-markdown>
+```html
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+	&lt;head&gt;
+		&lt;title&gt;I am a title&lt;/title&gt;
+	&lt;/head&gt;
+	&lt;body&gt;
+		&lt;p&gt;Hello there!&lt;/p&gt;
+	&lt;/body&gt;
+&lt;/html&gt;
+```
+</div>
+					</section>
 				</section>
 				<section>
 					<section>
