--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
 				</section>
 				<section>
 					<section>
+						<h1>HTTP</h1>
+					</section>
+					<section>
+						<h2>HTTP METHODS/VERBS</h2>
+						<ul>
+							<li>GET</li>
+							<li>POST</li>
+							<li>DELETE</li>
+							<li>PUT</li>
+							<li>PATCH</li>
+						</ul>
+					</section>
+				</section>
+				<section>
+					<section>
 						<h1>HTML</h1>
 					</section>
 					<section>
@@ -70,6 +85,45 @@
 .red-border {
 	border: 1px solid red;
 }
+```
+</div>
+					</section>
+					<section>
+<div data-markdown>
+```css
+.class {
+  attribute: value;
+}
+
+#id {
+  attribute: value;
+}
+
+tag {
+  attribute: value;
+}
+```
+</div>
+					</section>
+					<section>
+						<h3>What if I don't want to come up with a bunch of custom CSS?</h3>
+					</section>
+					<section>
+						<h3>Oh hello, <a href="https://getbootstrap.com">Bootstrap</a></h3>
+					</section>
+					<section data-background-image="/images/css-0.png">
+							<h2 style="color: black;">Go from 0...</h2>
+					</section>
+					<section data-background-image="/images/css-100.png">
+						<h2 style="color: black;">...to a 100...</h2>
+					</section>
+					<section>
+						<h2>...real quick</h2>
+<div data-markdown>
+```html
+&lt;head&gt;
+	&lt;link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"&gt;
+&lt;/head&gt;
 ```
 </div>
 					</section>
