use correct url

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@ tag {
 					<section>
 						<h3>Oh hello, <a href="https://getbootstrap.com">Bootstrap</a></h3>
 					</section>
-					<section data-background-image="/images/css-0.png">
+					<section data-background-image="images/css-0.png">
 							<h2 style="color: black;">Go from 0...</h2>
 					</section>
-					<section data-background-image="/images/css-100.png">
+					<section data-background-image="images/css-100.png">
 						<h2 style="color: black;">...to a 100...</h2>
 					</section>
 					<section>
