fix spelling mistakes

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ tag {
 				</section>
 				<section>
 					<section>
-						<h3>Now I went to integrate with some third-parties.</h3>
+						<h3>Now I want to integrate with some third-parties.</h3>
 						<h3>What do I do?</h3>
 					</section>
 					<section>
