--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
 ```
 </div>
 					</section>
+					<section>
+<div data-markdown>
+```html
+&lt;form action=&quot;/test-endpoint&quot; method=&quot;post&quot;&gt;
+	&lt;input type=&quot;text&quot; name=&quot;first_name&quot;&gt;
+	&lt;input type=&quot;text&quot; name=&quot;last_name&quot;&gt;
+	&lt;input type=&quot;submit&quot;&gt;
+&lt;/form&gt;
+```
+</div>
+					</section>
 				</section>
 				<section>
 					<section>
