--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 &lt;form action=&quot;/test-endpoint&quot; method=&quot;post&quot;&gt;
 	&lt;input type=&quot;text&quot; name=&quot;first_name&quot;&gt;
 	&lt;input type=&quot;text&quot; name=&quot;last_name&quot;&gt;
-	&lt;input type=&quot;submit&quot;&gt;
+	&lt;input type=&quot;submit&quot; value=&quot;Submit&quot;&gt;
 &lt;/form&gt;
 ```
 </div>
