add link to backend demo

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ $ flask run
 
 					</section>
 					<section>
-						<p>I am going to put more backend python code in here explaining more things</p>
+						<p>Back-end <a href="https://github.com/ibarreto/web-dev-101-flask-example">demo</a>! (using Python and Flask)</p>
 					</section>
 				</section>
 				<section>
