make more general css syntax

--- a/index.html
+++ b/index.html
@@ -109,8 +109,14 @@
 					<section>
 <div data-markdown>
 ```css
-.red-border {
-	border: 1px solid red;
+tag {
+	attribute: value;
+}
+.class {
+	attribute: value;
+}
+#id {
+	attribute: value;
 }
 ```
 </div>
