add graph for req-res cycle

--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
 				<section>
 					<section>
 						<p>What happens when you go to <a href="https://google.ca" target="_blank">https://google.ca</a>?</p>
+						<p class="fragment">It's complicated, but <a href="https://www.youtube.com/watch?v=ewrBalT_eBM">here</a>'s a good video explaining it</p>
 					</section>
 					<section>
 						<p>Request-Response Cycle</p>
+						<img src="https://www.safaribooksonline.com/library/view/using-google-app/9780596802462/httpatomoreillycomsourceoreillyimages295368.png">
+						<br>
+						<a href="https://www.safaribooksonline.com/library/view/using-google-app/9780596802462/httpatomoreillycomsourceoreillyimages295368.png" target="_blank">source</a>
 					</section>
 					<section>
 						<h2>Anatomy of a URL</h2>
@@ -146,17 +150,6 @@ console.log('hi there!');
 <div data-markdown>
 ```js
 document.getElementsByTagName('body')
-```
-</div>
-					</section>
-					<section>
-						<p>some other simple examples that I have to paste to this slides</p>
-					</section>
-					<section>
-						<h3>jQuery</h3>
-<div data-markdown>
-```js
-$('body')
 ```
 </div>
 					</section>
