add colors anatomy of url explanation

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
 					<section>
 						<h2>Anatomy of a URL</h2>
 						<span style="font-size: 20px;"><span style="color: green;">http</span>://<span style="color: yellow;">www.example.com</span><span style="color: orange;">:80</span><span style="color: blue;">/path/to/myfile.html</span><span style="color: red;">?key1=value1&key2=value2</span><span style="color: purple;">#SomewhereInTheDocument</span></span>
+						<span style="color: green;">protocol</span>
+						<span style="color: yellow;">domain</span>
+						<span style="color: orange;">port</span>
+						<span style="color: blue;">path</span>
+						<span style="color: red;">parameters</span>
+						<span style="color: purple;">anchor</span>
+						<p><a href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_is_a_URL">source</a></p>
 					</section>
 					<section>
 						<h2>HTTP METHODS/VERBS</h2>
