change colors a bit

--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
 					</section>
 					<section>
 						<h2>Anatomy of a URL</h2>
-						<span style="font-size: 20px;"><span style="color: green;">http</span>://<span style="color: yellow;">www.example.com</span><span style="color: orange;">:80</span><span style="color: blue;">/path/to/myfile.html</span><span style="color: red;">?key1=value1&key2=value2</span><span style="color: purple;">#SomewhereInTheDocument</span></span>
-						<span style="color: green;">protocol</span>
+						<span style="font-size: 26px;"><span style="color: rgb(71, 172, 71);">http</span>://<span style="color: yellow;">example.com</span><span style="color: orange;">:80</span><span style="color: rgb(120, 203, 247);">/path/to/file.html</span><span style="color: rgb(235, 128, 128);">?key1=val1&key2=val2</span><span style="color: rgb(196, 95, 196);">#SomewhereInDoc</span></span>
+						<br>
+						<span style="color: rgb(71, 172, 71);">protocol</span>
 						<span style="color: yellow;">domain</span>
 						<span style="color: orange;">port</span>
-						<span style="color: blue;">path</span>
-						<span style="color: red;">parameters</span>
-						<span style="color: purple;">anchor</span>
+						<span style="color: rgb(120, 203, 247);">path</span>
+						<span style="color: rgb(235, 128, 128);">parameters</span>
+						<span style="color: rgb(196, 95, 196);">anchor</span>
 						<p><a href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_is_a_URL">source</a></p>
 					</section>
 					<section>
